--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/app.js --ext js,jsx --ignore sessions"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Ocrahedron/cocktail_project.git",
-    "dev": "nodemon src/app.js --ext js,jsx --ignore sessions"
+    "url": "git+https://github.com/Ocrahedron/cocktail_project.git"
   },
   "keywords": [],
   "author": "",
